--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_map">Map</string>
     <string name="profile">Profile</string>
+    <string name="messages">Messages</string>
 </resources>
